--- a/inetpub/wwwroot/ServicesMvc/Views/Equi/Briefversand/FahrzeugAuswahl.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Equi/Briefversand/FahrzeugAuswahl.cshtml
@@ -54,7 +54,6 @@ else
         <i class="icon-check"></i><span class="padding-left-5 bold"></span>
     </span>
 </h4> 
-<label id="count" style="display: none"></label>
 @Html.SpanAlert("Message")
 
 @(Html.XTelerik()
@@ -65,8 +64,7 @@ else
         {
             columns.XBound(c => c.Action)
                 .ClientTemplate("<# if (data.IsMissing) { #> <span><i class='icon-bell margin-left-5'></i></span> <# } else { #><input type='checkbox' name='checkedRecords' <# if (data.IsSelected) { #> checked <# } #> value='<#= data.Fahrgestellnummer #>' onchange='OnSelectionChange_GridFahrzeugAuswahl($(this))' /> <# } #>")
-                .HeaderTemplate("<input type='checkbox' id='uncheckAllRecords' onchange='GridFahrzeugAuswahl_OnAllSelectionChange($(this).is(\":checked\"))' />" +
-                 "<i class='icon-remove cursor-pointer tooltips' data-original-title='" + Localize.MultiSelectUncheckAllFilteredItems + "' data-placement='right' id='uncheckAllRecords' onclick='GridFahrzeugAuswahl_OnAllSelectionChange(false)'></i>"
+                .HeaderTemplate("<input type='checkbox' id='uncheckAllRecords' onchange='GridFahrzeugAuswahl_OnAllSelectionChange($(this).is(\":checked\"))' />"
                 )
                 .Filterable(false);
 
