--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/ScriptsDeviation.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/ScriptsDeviation.cshtml
@@ -116,6 +116,8 @@
                 $(this).closest(".form-actions").css("text-align", "left");
                 $(this).closest(".form-actions .btn.blue").css("margin-left", "15px");
             });
+
+            $(".m-wrap.kennzeichen").closest(".control-group").addClass("kennzeichen");
         });
 
     }
