--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
@@ -368,6 +368,10 @@ body{
 }
 
 
+.control-group-raw.error, .control-group-raw.error span {
+    color: #b94a48!important;
+}
+
 
 input[type="text"].m-wrap.kennzeichen,
 span.kennzeichen{
@@ -388,6 +392,9 @@ span.kennzeichen{
   margin-top: -7px !important;
   font-weight: normal !important;
   max-width: 190px;
+}
+.control-group.kennzeichen {
+    margin-bottom: 10px;
 }
 
 span.kennzeichen{
