--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Haendlerkennzeichen.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Haendlerkennzeichen.cshtml
@@ -1,8 +1,12 @@
 ﻿@model CkgDomainLogic.Autohaus.ViewModels.KroschkeZulassungViewModel
 
 <style>
-
-
+    .control-group-raw {
+        font-size: 1.1em;
+    }
+    #KennzeichenMenge.m-wrap.xsmall {
+        width: 21px !important;
+    }
 </style>
 
 <script type="text/javascript">
