--- a/inetpub/wwwroot/ServicesMvc/Views/Equi/Briefversand/FahrzeugAuswahl.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Equi/Briefversand/FahrzeugAuswahl.cshtml
@@ -63,7 +63,7 @@ else
     .Columns(columns =>
         {
             columns.XBound(c => c.Action)
-                .ClientTemplate("<# if (data.IsMissing) { #> <span><i class='icon-bell margin-left-5'></i></span> <# } else { #><input type='checkbox' name='checkedRecords' <# if (data.IsSelected) { #> checked <# } #> value='<#= data.Fahrgestellnummer #>' onchange='OnSelectionChange_GridFahrzeugAuswahl($(this))' /> <# } #>")
+                .ClientTemplate("<# if (data.IsMissing) { #> <span><i class='icon-bell margin-left-5'></i></span> <# } else { #><input type='checkbox' id='<#= data.Fahrgestellnummer #>' name='checkedRecords' <# if (data.IsSelected) { #> checked='checked' <# } #> value='<#= data.Fahrgestellnummer #>' onchange='OnSelectionChange_GridFahrzeugAuswahl($(this))' /> <# } #>")
                 .HeaderTemplate("<input type='checkbox' id='uncheckAllRecords' onchange='GridFahrzeugAuswahl_OnAllSelectionChange($(this).is(\":checked\"))' />"
                 )
                 .Filterable(false);
