ForwmWizard, "button next" now with accesskey="w"

--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/FormWizardTemplate.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/FormWizardTemplate.cshtml
@@ -53,7 +53,7 @@
                             <a href="javascript:;" class="btn button-prev">
                                 <i class="m-icon-swapleft"></i> Zurück 
                             </a>
-                            <a href="javascript:;" class="btn green button-next">
+                            <a href="javascript:;" accesskey="w" class="btn green button-next">
                                 <span>Weiter</span> <i class="m-icon-swapright m-icon-white"></i>
                             </a>
                             <a href="javascript:;" class="btn green button-submit">
