work in progress

--- a/inetpub/wwwroot/ServicesMvc/Views/Equi/FahrzeugHistorie.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Equi/FahrzeugHistorie.cshtml
@@ -5,7 +5,7 @@
 
 @using (Html.FormSearchBox())
 {
-    @Html.Partial("Historie/HistorieSuche", Model.DataService.Suchparameter)
+    @Html.Partial("Historie/HistorieSuche", Model.Suchparameter)
 }
 
 @using (Html.FormSearchResultsGrid())
