Korrektur Grid-Sortierung (BelegNr)

--- a/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/ReportDurchgefuehrteZulassungen/Grid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/ReportDurchgefuehrteZulassungen/Grid.cshtml
@@ -12,9 +12,7 @@
     .XAjaxDataBinding("DurchgefuehrteZulassungenAjaxBinding", "ZldPartner")
     .Columns(columns =>
     {
-        columns.XBound(c => c.DatensatzId).Visible(false);
-        columns.XBound(c => c.BelegNr);
-        columns.XBound(c => c.BelegPosition).Visible(false);
+        columns.XBound(c => c.BelegNrSort);
         columns.XBound(c => c.Kunde);
         columns.XBound(c => c.Halter);
         columns.XBound(c => c.FahrgestellNr);
