--- a/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/DurchzufuehrendeZulassungen/Grid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/DurchzufuehrendeZulassungen/Grid.cshtml
@@ -14,7 +14,7 @@
     {
         columns.XBound(c => c.BelegNr)
             .ClientTemplate(
-                "<a href='#' onclick='AddPosition(\"<#= data.BelegNr #>\");' class='tooltips <# if (!data.Hauptposition) { #>" + "hide" + "<# } #>' data-original-title='" + Localize.AddPosition + "' data-placement='right'><#= data.BelegNr #></a>" +
+                "<a href='#' onclick='AddPosition(\"<#= data.BelegNr #>\");' class='tooltips <# if (!data.Hauptposition) { #>" + "hide" + "<# } #>' data-original-title='" + Localize.AddPosition + "' data-placement='right'><#= data.BelegNrSort #></a>" +
                 "<button href='#' onclick='DeletePosition(\"<#= data.DatensatzId #>\");' class='btn mini gray tooltips <# if (!data.NeuePosition) { #>" + "hide" + "<# } #>' data-original-title='" + Localize.DeletePosition + "' data-placement='right'><i class='halflings-icon white remove'></i></button>"
             );
         columns.XBound(c => c.Halter);
