--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrer/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrer/Index.cshtml
@@ -56,7 +56,7 @@
 @if (Model.UserIsInOdinGroup())
 {
     <div class="fahrer-main-menuitem">
-        <a href="~/Fahrer/Auftragsauswahl" class="btn red tooltips">
+        <a href="~/Fahrer/FreieAuftraege" class="btn red tooltips">
             <i class="icon-check margin-right-10"></i>
             @Localize.TranslateResourceKey(LocalizeConstants.FreieAuftraege)
         </a>
