--- a/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/DurchzufuehrendeZulassungen/Grid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/DurchzufuehrendeZulassungen/Grid.cshtml
@@ -12,7 +12,7 @@
     .XAjaxDataBinding("OffeneZulassungenAjaxBinding", "ZldPartner")
     .Columns(columns =>
     {
-        columns.XBound(c => c.BelegNr)
+        columns.XBound(c => c.BelegNrSort)
             .ClientTemplate(
                 "<a href='#' onclick='AddPosition(\"<#= data.BelegNr #>\");' class='tooltips <# if (!data.Hauptposition) { #>" + "hide" + "<# } #>' data-original-title='" + Localize.AddPosition + "' data-placement='right'><#= data.BelegNrSort #></a>" +
                 "<button href='#' onclick='DeletePosition(\"<#= data.DatensatzId #>\");' class='btn mini gray tooltips <# if (!data.NeuePosition) { #>" + "hide" + "<# } #>' data-original-title='" + Localize.DeletePosition + "' data-placement='right'><i class='halflings-icon white remove'></i></button>"
