--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrer/FreieAuftraege.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrer/FreieAuftraege.cshtml
@@ -1,5 +1,60 @@
-﻿@{
+﻿@model CkgDomainLogic.Fahrer.ViewModels.FahrerViewModel
+
+@{
     ViewBag.Title = "Freie Aufträge";
 }
 
+@Html.Partial("Partial/Common")
+
 <h2>Freie Aufträge</h2>
+
+<div id="divFreieFahrtenGrid">
+    
+    @Html.Partial("Partial/Auftraege/FreieAuftraegeGrid", Model)
+
+</div>
+
+
+<script type="text/javascript">
+
+    var ladeHinweis = '@Localize.LoadingData';
+
+    function FormPreparePrivate() {
+        GridAllColumnFilterApplyToGrid("GridGridFreieAuftraege");
+    }
+
+    function FormPreparePrivateAjax() {
+        FormPrepareAjax();
+    }
+
+    function GetGrid() {
+        return $("#GridGridFreieAuftraege").data("tGrid");
+    }
+
+    function GridLoadingHide() {
+        // needed for chrome browser: Explicitely hide grids loading icon on multiple subsequent grid ajax requests (because of filter control initializing)
+        setTimeout('$("#GridFreieAuftraegeItems .t-grid-pager .t-status .t-icon").removeClass("t-loading")', 500);
+    }
+
+    function GridRefresh() {
+        GetGrid().ajaxRequest();
+    }
+
+    function OnDataBound_GridFreieAuftraege() {
+        FilteredData_Grid_OnDataBound($(this));
+        $('.tooltips').tooltip();
+    }
+
+    function OnLoad_GridFahrerProtokolle() {
+        $('.t-no-data td').text(ladeHinweis);
+    }
+
+    function OnColumnShowHide_GridFreieAuftraege() {
+        FilteredData_Grid_OnColumnShowHide($(this));
+    }
+
+    function OnColumnReorder_GridFreieAuftraege() {
+        FilteredData_Grid_OnColumnReorder($(this));
+    }
+
+</script>
