--- a/inetpub/wwwroot/ServicesMvc/Views/Login/LoginForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Login/LoginForm.cshtml
@@ -45,15 +45,15 @@
 
                      <div class="form-actions">
                          <button type="submit" class="btn blue pull-right loginbtn">
-                             <i class="icon-chevron-right m-icon-white"></i> Login
+                             <i class="icon-chevron-right m-icon-white"></i> @Localize.Login
                          </button>            
                      </div>
 
                      <div class="forget-password">
-                         <h4><a href="javascript:RequestSwitchMode(true);" id="forget-password"><i class="icon-chevron-right"></i> @Localize.PasswordForgottenQuestion</a></h4>
+                         <h4><a href="javascript:RequestSwitchMode(true);" id="forget-password"><i class="icon-chevron-right"></i> @Localize.PasswordForgottenQuestion2</a></h4>
                      </div>
                      <div class="forget-password">
-                        <h4><a href="javascript:NoAccessNeedHelp();" id="noaccess-needhelp"><i class="icon-chevron-right"></i> NoAccessNeedHelp </a></h4>                        
+                        <h4><a href="javascript:NoAccessNeedHelp();" id="noaccess-needhelp"><i class="icon-chevron-right"></i> @Localize.NoAccessNeedHelp </a></h4>                        
                     </div>
                  }
             </div>
