--- a/inetpub/wwwroot/ServicesMvc/Views/Login/Partial/CustomerForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Login/Partial/CustomerForm.cshtml
@@ -7,9 +7,11 @@
                             new { @class = "no-loading-indicator form-vertical login-form", id = "AjaxFormCustomer" }))
 {
 
-    <h3 class="form-title">Bitte hier usw.  @*@Localize.PleaseEnterCustomerInfo*@</h3>
+    <h3 class="form-title">@Localize.PleaseEnterCustomerInfo</h3>
 
     @Html.HiddenFor(m => m.ModeCaptchaReset)
+
+    @*@Html.FormDropDownListFor(m => m.Anrede, CustomerModel.Anreden.ToSelectList(), new { @class = "m-wrap medium", placeholder = "Anrede" })*@
 
     @Html.FormPlaceholderTextBoxFor(m => m.Anrede, new {@class = "m-wrap"})
 
@@ -25,7 +27,7 @@
 
     @Html.FormPlaceholderTextBoxFor(m => m.EMailAdresse, new {@class = "m-wrap placeholder-no-fix", autocomplete = "off"}, "icon-user")
 
-    @Html.FormTextAreaFor(m => m.FrageProblem, new {@class = "m-wrap"})
+    @Html.FormTextAreaFor(m => m.FrageProblem, new {@class = "m-wrap", placeholder = Localize.AddYourQuestionHere })
 
     <div class="captcha-wrapper">
         <img src="~/Shared/Captcha?id=@Guid.NewGuid()" alt="captcha" class="captcha-image"/>
@@ -35,22 +37,14 @@
     </div>
 
     @Html.FormPlaceholderTextBoxFor(m => m.CaptchaText, new {@class = "m-wrap placeholder-no-fix", autocomplete = "off"}, "icon-picture")
-
-    @*<div class="form-actions">
-        <button type="submit" class="btn blue pull-right pwbtn">
-            <i class="icon-chevron-right m-icon-white"></i>
-        </button>
-    </div>*@
-
+    
     <div class="forget-password margin-top-10">
-        <button type="submit" class="btn green"> Absenden</button>
-        @*<h4><a href="javascript:SubmitForm();" id="forget-password"><i class="icon-chevron-right"></i> Absenden</a></h4>*@
+        <button type="submit" class="btn green"> Absenden</button>     
     </div>
 
     
     <script type="text/javascript">
-
-        _modelStateValid = '@ViewContext.ViewData.ModelState.IsValid.ToString().ToLower()';
+        
         _modeCaptchaReset = @Model.ModeCaptchaReset.ToString().ToLower();
         _modelIsValid = @Model.IsValid.ToString().ToLower();
 
@@ -62,6 +56,10 @@
         }
 
         $("#ModeCaptchaReset").val(false);
+
+        function FormPreparePrivate() {
+            Login.init();
+        };
 
         function ResetCaptcha() {
             $("#ModeCaptchaReset").val(true);
@@ -75,6 +73,10 @@
         }
 
         function AjaxFormCustomerComplete() {
+            FormPreparePrivateAjax();
+        }
+
+        function FormPreparePrivateAjax() {
             FormPrepareAjax();
         }
 
